// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`password.sql > line 6 1`] = `
[
  "SET password_encryption = 'novalue'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "novalue",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "password_encryption",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 26 1`] = `
[
  "SELECT rolname, regexp_replace(rolpassword, '(SCRAM-SHA-256)\\$(\\d+):([a-zA-Z0-9+/=]+)\\$([a-zA-Z0-9+=/]+):([a-zA-Z0-9+/=]+)', '\\1$\\2:<salt>$<storedkey>:<serverkey>') as rolpassword_masked
    FROM pg_authid
    WHERE rolname LIKE 'regress_passwd%'
    ORDER BY rolname, rolpassword",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 196,
                  "relname": "pg_authid",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 260,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolpassword",
                          },
                        },
                      ],
                      "location": 269,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "name": "rolpassword_masked",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "rolpassword",
                                },
                              },
                            ],
                            "location": 31,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 44,
                            "sval": {
                              "sval": "(SCRAM-SHA-256)\\$(\\d+):([a-zA-Z0-9+/=]+)\\$([a-zA-Z0-9+=/]+):([a-zA-Z0-9+/=]+)",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 125,
                            "sval": {
                              "sval": "\\1$\\2:<salt>$<storedkey>:<serverkey>",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "regexp_replace",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 216,
                  },
                },
                "location": 224,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 229,
                    "sval": {
                      "sval": "regress_passwd%",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 32 1`] = `
[
  "ALTER ROLE regress_passwd2 RENAME TO regress_passwd2_new",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "regress_passwd2_new",
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_ROLE",
            "subname": "regress_passwd2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 34 1`] = `
[
  "SELECT rolname, rolpassword
    FROM pg_authid
    WHERE rolname LIKE 'regress_passwd2_new'
    ORDER BY rolname, rolpassword",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 37,
                  "relname": "pg_authid",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 105,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolpassword",
                          },
                        },
                      ],
                      "location": 114,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolpassword",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
                "location": 65,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 70,
                    "sval": {
                      "sval": "regress_passwd2_new",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 45 1`] = `
[
  "ALTER ROLE regress_passwd2 PASSWORD 'foo'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "foo",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 27,
                },
              },
            ],
            "role": {
              "location": 11,
              "rolename": "regress_passwd2",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 47 1`] = `
[
  "ALTER ROLE regress_passwd1 PASSWORD 'md5cd3578025fe2c3d7ed1b9a9b26238b70'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "md5cd3578025fe2c3d7ed1b9a9b26238b70",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 27,
                },
              },
            ],
            "role": {
              "location": 11,
              "rolename": "regress_passwd1",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 52 1`] = `
[
  "ALTER ROLE  regress_passwd4 PASSWORD 'foo'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "foo",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 28,
                },
              },
            ],
            "role": {
              "location": 12,
              "rolename": "regress_passwd4",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 54 1`] = `
[
  "CREATE ROLE regress_passwd5 PASSWORD 'md5e73a4b11df52a6068f8b39f90be36023'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "md5e73a4b11df52a6068f8b39f90be36023",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 28,
                },
              },
            ],
            "role": "regress_passwd5",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 58 1`] = `
[
  "CREATE ROLE regress_passwd6 PASSWORD 'SCRAM-SHA-256$1234'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "SCRAM-SHA-256$1234",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 28,
                },
              },
            ],
            "role": "regress_passwd6",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 62 1`] = `
[
  "CREATE ROLE regress_passwd7 PASSWORD 'md5012345678901234567890123456789zz'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "md5012345678901234567890123456789zz",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 28,
                },
              },
            ],
            "role": "regress_passwd7",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 64 1`] = `
[
  "CREATE ROLE regress_passwd8 PASSWORD 'md501234567890123456789012345678901zz'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "md501234567890123456789012345678901zz",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 28,
                },
              },
            ],
            "role": "regress_passwd8",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 67 1`] = `
[
  "SET scram_iterations = 1024",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 1024,
                  },
                  "location": 23,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "scram_iterations",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 76 1`] = `
[
  "CREATE ROLE regress_passwd_empty PASSWORD ''",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 33,
                },
              },
            ],
            "role": "regress_passwd_empty",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 85 1`] = `
[
  "CREATE ROLE regress_passwd_sha_len0 PASSWORD 'SCRAM-SHA-256$4096:A6xHKoH/494E941doaPOYg==$Ky+A30sewHIH3VHQLRN9vYsuzlgNyGNKCh37dy96Rqw=:COPdlNiIkrsacU5QoxydEuOH6e/KfiipeETb/bPw8ZI='",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "SCRAM-SHA-256$4096:A6xHKoH/494E941doaPOYg==$Ky+A30sewHIH3VHQLRN9vYsuzlgNyGNKCh37dy96Rqw=:COPdlNiIkrsacU5QoxydEuOH6e/KfiipeETb/bPw8ZI=",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "password",
                  "location": 36,
                },
              },
            ],
            "role": "regress_passwd_sha_len0",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 91 1`] = `
[
  "SELECT rolname, rolpassword not like '%A6xHKoH/494E941doaPOYg==%' as is_rolpassword_rehashed
    FROM pg_authid
    WHERE rolname LIKE 'regress_passwd_sha_len%'
    ORDER BY rolname",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 102,
                  "relname": "pg_authid",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 174,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "name": "is_rolpassword_rehashed",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_LIKE",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "rolpassword",
                              },
                            },
                          ],
                          "location": 16,
                        },
                      },
                      "location": 28,
                      "name": [
                        {
                          "String": {
                            "sval": "!~~",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 37,
                          "sval": {
                            "sval": "%A6xHKoH/494E941doaPOYg==%",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 122,
                  },
                },
                "location": 130,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 135,
                    "sval": {
                      "sval": "regress_passwd_sha_len%",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`password.sql > line 96 1`] = `
[
  "DROP ROLE regress_passwd1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_passwd1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
